src/blocks/CodeFeature/index.module.scss
@use '@scss/common' as *;

.wrapper {
  &.darkTheme {
    background: var(--color-base-950);

    & .backgroundGrid {
      z-index: 0;
    }
  }
}

.container {
  position: relative;
  align-items: center;
  row-gap: calc(var(--base) * 3);
  padding-top: calc(var(--base) * 11.5);
  padding-bottom: calc(var(--base) * 11.5);

  @include mid-break {
    padding-top: calc(var(--base) * 3);
    padding-bottom: calc(var(--base) * 3);
  }
}

.content {
  position: relative;
  z-index: 1;
}

.labelWrap {
  padding: var(--base) var(--base) 0;
}

.label {
  padding-bottom: var(--base);
  border-bottom: 1px solid var(--color-base-700);
  color: var(--color-base-100);
  margin: 0;
}

.heading {
  margin-top: 0;
}

.richText {
  margin-bottom: calc(var(--base) * 1.5);
}

.links {
  width: 100%;

  > * {
    width: 100%;
  }
}

.tabsWrapper {
  position: relative;
  border: 1px solid var(--theme-elevation-200);
}

.code {
  position: relative;
}

.tabs {
  position: relative;
  display: flex;
  gap: calc(var(--base) * 2);
  padding: 0 calc(var(--base) * 2);
  background: var(--color-base-900);
  overflow-x: auto;
  scroll-behavior: smooth;
  @include dark-custom-scrollbar;

  &.hasMultiple {
    border-bottom: 1px solid var(--color-base-600);
  }

  @include mid-break {
    padding: 0 calc(var(--base) * 1);
  }
}

.hiddenTab {
  @include visually-hidden;
}

.tabIndicator {
  position: absolute;
  left: 0;
  height: 2px;
  width: 100%;
  bottom: 0px;
  background: var(--color-base-200);
  transition: width var(--trans-default) linear, left var(--trans-default) linear ;
}

.tab {
  @include btnReset;
  cursor: pointer;
  padding: calc(var(--base) * 1) 0;
  @include body;
  font-size: calc(var(--base) * 0.9);
  color: var(--color-base-300);
  white-space: nowrap;

  &.isActive, &:hover {
    color: var(--color-base-50);
  }
}

.scanlineWrapper {
  position: absolute;
  height: 100%;
  top: calc(var(--base) * 5.75);
  height: calc(100% - var(--base) * 11.5);
  width: 100%;

  @include mid-break {
    display: none;
  }
}

.crosshairTopRight, .crosshairBottomRight {
  position: absolute;
  width: calc(var(--base) * 1);
  height: auto;
  color: var(--theme-elevation-1000);
  opacity: 0.5;
}

.crosshairTopRight {
  top: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.crosshairBottomRight {
  bottom: calc(var(--base) * -0.5);
  right: calc(var(--base) * -0.5);
}

.scanlineDesktop {
  width: calc(100% + var(--gutter-h) * 1);
  margin-right: calc(var(--gutter-h) * -1);
}

.scanlineMobile {
  display: none;

  @include mid-break {
    display: block;
    width: calc(100% + var(--gutter-h) * 2);
    margin-left: calc(var(--gutter-h) * -1);
    margin-right: calc(var(--gutter-h) * -1);
  }
}

.codeBlockWrapper {
  position: relative;
  background-color: var(--color-base-900);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  overflow-x: auto;
  @include dark-custom-scrollbar;
}

.codeBlock {
  position: relative;
  display: block;
  visibility: hidden;
  grid-column: 1/1;
  grid-row: 1/1;

  &.isActive {
    visibility: visible;
  }
}

